# FPS

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json
.cmake/api/v1/reply/: cache-v2-3c8228d6d513b288fb27.json  cache-v2-8a0f999e4a9f7e6b85f7.json  cache-v2-b303545cf37cf39a0e9c.json  cmakeFiles-v1-a9afcd6f31273c1a74a9.json  cmakeFiles-v1-c1e41915a5242b072b1a.json  cmakeFiles-v1-ecafc4f68d6c987d0cd4.json  codemodel-v2-399bdd48498f6190ca66.json  codemodel-v2-53b11f88b53696d77906.json  codemodel-v2-fae3aade8a3478f13051.json  index-2026-03-21T14-20-22-0190.json  index-2026-06-13T14-44-00-0224.json  index-2026-06-26T01-06-27-0026.json  target-OpenGL__GL-Debug-838bbe004911cd43885d.json  target-OpenGL__GL-Debug-dc5e1b5dfdefcf7aa335.json  target-OpenGL__GLU-Debug-57a6b48fa19661e2b728.json  target-OpenGL__GLU-Debug-97c97c7e236eb0fec813.json  target-Threads__Threads-Debug-52538a34f2a49188e5cd.json  target-Threads__Threads-Debug-ef909359349ebab6fa80.json  target-assimp__assimp-Debug-556952ecbf2729f79b7f.json  target-assimp__zlibstatic-Debug-6c1a4ff88652dd6b334a.json  target-fps-Debug-d83f579a41eb01b40728.json  target-fps-Debug-eff0d4f87627a88806dd.json  target-glfw-Debug-9ff8fa00dbb0d275a370.json  target-glm__glm-Debug-b0a67cb1e09eeff84f26.json  (+1 more)
include/Engine/: Camera.h  Entity.h  Event.h  Input.h  Mesh.h  Model.h  Shader.h
include/glad/: glad.h
src/: glad.c  main.cpp
src/Engine/: Camera.cpp  Entity.cpp  Mesh.cpp  Model.cpp  Shader.cpp
src/Game/: Player.cpp  Utility.cpp  Weapon.cpp
